--- a/CSS.intro/file7 - practice/task 5/style.css
+++ b/CSS.intro/file7 - practice/task 5/style.css
@@ -2,11 +2,13 @@ body {
     background-color: #0e0d13;
 }
 img {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
-    margin-left: 300px;
-    margin-top: 200px;
+    margin-left: 220px;
+    margin-top: 100px;
+    margin-bottom: 200px;
+    
 }
 h2 {
     text-align: center;
@@ -20,4 +22,20 @@ h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
     font-size: 35px;
+}
+p.btn{
+    text-align: center;
+    margin-left: 45%;
+    margin-right: 50%;
+    padding: 5px;
+    border: 4px #950d35 solid;
+    border-radius: 10%;
+    background-color: #950d35;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+}
+a:visited {
+    color: white;
 }
