--- a/CSS.intro/file8/style.css
+++ b/CSS.intro/file8/style.css
@@ -19,6 +19,7 @@ img{
     width: 100%;
     text-align: center;
     bottom: 0px;
+    display: none;
 }
 .title, .description {
     position: absolute;
@@ -26,4 +27,15 @@ img{
     color: white;
     background-color: rgba(0, 0, 0, 0.6) ;
     left: 0;
+}
+.photo-item:hover .description{
+    display: block;
+}
+
+#btnTop {
+    position: fixed;
+    padding: 10px;
+    background-color: #4c4b4b;
+    bottom: 50px;
+    right: 30px;
 }
