--- a/JS/First steps/Проект Модальное Окно/style.css
+++ b/JS/First steps/Проект Модальное Окно/style.css
@@ -81,7 +81,9 @@ body {
 }
 
 /* МОДАЛЬНОЕ ОКНО */
-
+.modal.show{
+    display: flex;
+}
 .modal_close {
     width: 20px;
     height: 20px;
@@ -123,6 +125,9 @@ body {
     width: 100%;
     margin: auto;
     background-color: #fff;
+
+    transform: rotateX(90deg);
+    transition: transform 0.2s linear;
 } 
 
 .modal_title {
