spa website almost done

--- a/JS/First steps/Project-spa/css/addNews.css
+++ b/JS/First steps/Project-spa/css/addNews.css
@@ -64,3 +64,11 @@ main {
     justify-content: flex-end;
     display: flex;
 }
+
+#add-news-form #file{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    position: absolute;
+    z-index: -10;
+}
